modal projects modified
html : changed projects order, added projects description
css: description icons and description span
js: added description toggle button function

--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@
                 </div>
                 <!-- mark up 1 -->
                 <div
-                  class="project-each mark-up3 swiper-slide"
+                  class="project-each mark-up1 swiper-slide"
                   data-type="Mark-up"
                 >
                   <h4 class="each-project-title">디자인 시안 1 마크업</h4>
                   <div class="image-link">
                     <img
-                      src="imgs/AgataSiteMarkup_small.JPG"
-                      alt="Agata-result_small"
+                      src="imgs/yogaSiteMarkup.jpg"
+                      alt="yogasite-result"
                       class="each-project-img"
                     />
                   </div>
@@ -305,14 +305,14 @@
                 </div>
                 <!-- mark up 3 -->
                 <div
-                  class="project-each mark-up1 swiper-slide"
+                  class="project-each mark-up3 swiper-slide"
                   data-type="Mark-up"
                 >
                   <h4 class="each-project-title">디자인 시안 3 마크업</h4>
                   <div class="image-link">
                     <img
-                      src="imgs/yogaSiteMarkup.jpg"
-                      alt="yogasite-result"
+                      src="imgs/AgataSiteMarkup_small.JPG"
+                      alt="Agata-result_small"
                       class="each-project-img"
                     />
                   </div>
@@ -323,7 +323,7 @@
             </div>
           </div>
         </div>
-        <!-- Mark up 3 modal -->
+        <!-- Mark up 1 modal -->
         <div class="modal mark-up1 hidden" data-type="Mark-up">
           <div class="modal-contents">
             <a
@@ -340,22 +340,27 @@
             <div class="modal-divide"></div>
             <div class="modal-project-right">
               <span class="modal-project-tag">Mark up</span>
-              <h4 class="modal-project-title">디자인 시안 마크업 3</h4>
+              <h4 class="modal-project-title">디자인 시안 마크업 1</h4>
               <div class="modal-project-description">
                 <div class="description-wrap">
                   <span>
-                    Yoga Site Mark Up Porject. <br />
-                    From an image template to a resposive web site. <br />
-                    Yoga site를 PSD 시안에 따라 마크업<br />
-                    Media query를 적용하여 반응형으로 구성<br />
+                    프로젝트 설명 <br /><br />
+                    Yoga site를 이미지 레이아웃(PSD 시안)에 따라 마크업<br />
+                    Media Query를 적용하여 반응형으로 구성<br />
                     Web Design 시안 출처: https://www.freepik.com/psd/
                   </span>
                   <span>
-                    두번째 장 <br />
-                    From an image template to a resposive web site. <br />
-                    Yoga site를 PSD 시안에 따라 마크업<br />
-                    Media query를 적용하여 반응형으로 구성<br />
-                    Web Design 시안 출처: https://www.freepik.com/psd/
+                    어려웠던 점: <br />
+                    flex의 사용이 익숙치 않아 어려웠다.<br />
+                    Media Query를 처음 적용해보았기 때문에,<br />
+                    그에 따른 이미지 크기/비율 등을 맞추는 것이 힘들었다.<br />
+                    레이아웃 이미지만 있고, section마다의 크기나<br />
+                    margin 등의 가이드라인이 없어 어려웠다.<br /><br />
+                    배운점: <br />
+                    레이아웃 이미지를 보고 웹 페이지를 구성할 수 있게 되었다.<br />
+                    flex의 사용과 Media Query 적용을 할 수 있게 되었다.<br />
+                    아직 HTML 시멘틱하게 작성하거나 CSS 코딩법을 고려하지 않고
+                    마크업하여 추후 보완이 필요하다고 느낌<br />
                   </span>
                 </div>
               </div>
@@ -363,7 +368,7 @@
                 <span>HTML</span>
                 <span>CSS</span>
               </div>
-              <button class="description-next">next</button>
+              <i class="fas fa-chevron-right description-next"></i>
               <button class="closeModal">X</button>
             </div>
           </div>
@@ -387,25 +392,38 @@
               <span class="modal-project-tag">Mark up</span>
               <h4 class="modal-project-title">디자인 시안 마크업 2</h4>
               <div class="modal-project-description">
-                <span
-                  >Snow Site(an agency portfolio template) Mark Up Porject.
-                  <br />
-                  From a template to a resposive web site. <br />
-                  Snow site(web agency 포트폴리오 템플릿 사이트)를 PSD 시안에
-                  따라 마크업 <br />
-                  media query를 적용하여 반응형으로 구성<br />
-                  Web Design 시안 출처: https://dribbble.com/sudinasa
-                </span>
+                <div class="description-wrap">
+                  <span>
+                    프로젝트 설명:
+                    <br />
+                    <br />
+                    Snow site(web agency 포트폴리오 템플릿 사이트)를 PSD 시안에
+                    따라 마크업 <br />
+                    Media Query를 적용하여 반응형으로 구성<br />
+                    Navigation에서 about/contact 클릭 시 해당 섹션 이동 구현<br />
+                    Web Design 시안 출처: https://dribbble.com/sudinasa
+                  </span>
+                  <span>
+                    어려웠던 점: <br />
+                    pager라는 용어를 몰라 제한된 이미지 컨테이너에서<br />
+                    이미지를 가로로 스크롤하는 방법을 알 수 없었다.<br />
+                    여전히 웹 페이지를 구현하는데에 시간이 오래걸렸다.<br /><br />
+                    배운점: <br />
+                    flex의 사용과 Media Query 적용이 조금 더 수월해졌다.<br />
+                    pager/pagination에 대해 알게 되어 구현할 수 있게 되었다.<br />
+                  </span>
+                </div>
               </div>
               <div class="modal-project-stacks">
                 <span>HTML</span>
                 <span>CSS</span>
               </div>
+              <i class="fas fa-chevron-right description-next"></i>
               <button class="closeModal">X</button>
             </div>
           </div>
         </div>
-        <!-- Mark up 1 modal -->
+        <!-- Mark up 3 modal -->
         <div class="modal mark-up3 hidden" data-type="Mark-up">
           <div class="modal-contents">
             <a
@@ -422,22 +440,36 @@
             <div class="modal-divide"></div>
             <div class="modal-project-right">
               <span class="modal-project-tag">Mark up</span>
-              <h4 class="modal-project-title">디자인 시안 마크업 1</h4>
+              <h4 class="modal-project-title">디자인 시안 마크업 3</h4>
               <div class="modal-project-description">
-                <span
-                  >Agata Bielen Site Mark Up Porject.
-                  <br />
-                  From an image template to a resposive web site. <br />
-                  Agata Bielen Site(엑세서리 매장 사이트)를 PSD 시안에 따라
-                  마크업 <br />media query를 적용하여 반응형으로 구성<br />Web
-                  Design 시안 출처:
-                  https://freebiesbug.com/psd-freebies/agata-bielen-psd-template/
-                </span>
+                <div class="description-wrap">
+                  <span>
+                    프로젝트 설명:
+                    <br />
+                    <br />
+                    Agata Bielen Site(엑세서리 매장 사이트)를 PSD 시안에 따라
+                    마크업 <br />Media Query를 적용하여 반응형으로 구성<br />
+                    Main Page에서 Right Line 및 Nature Line 페이지까지 구현<br />
+                    Web Design 시안 출처: https://freebiesbug.com/psd-freebies
+                  </span>
+                  <span>
+                    어려웠던 점: <br />
+                    이미지와 목록들의 배열을 맞추는 것이 어려웠다.<br />
+                    네 방향에 line 및 링크를 구현하는 것이 생각보다 어려웠다.<br />
+                    작은 화면에서의 디자인 레이아웃이 없어 직접 재구성해야
+                    했다.<br /><br />
+                    배운점: <br />
+                    독특한 디자인의 웹 페이지를 구성해볼 수 있었고,<br />
+                    레이아웃 디자인 가이드라인없이 Media Query 적용해볼 수
+                    있었다.<br />
+                  </span>
+                </div>
               </div>
               <div class="modal-project-stacks">
                 <span>HTML</span>
                 <span>CSS</span>
               </div>
+              <i class="fas fa-chevron-right description-next"></i>
               <button class="closeModal">X</button>
             </div>
           </div>
@@ -461,22 +493,44 @@
               <span class="modal-project-tag">Web Site</span>
               <h4 class="modal-project-title">when & where</h4>
               <div class="modal-project-description">
-                <span
-                  >Vanilla JS Web Site 개인 프로젝트
-                  <br />
-                  세계 여행에 필요한 나라별/월별 기후를 알려주는 Web Site<br />
-                  worldbank - Climate Data API 사용<br />
-                  검색창에 국가명(영어 기준)을 검색, 자동 추천 기능<br />
-                  월을 선택하여 선택된 국가의 해당 월의 기후(평균 기온, 강수량,
-                  일교차)를 그에 맞는 이미지와 함께 확인 가능<br />
-                  모든 기능은 plugin없이 vanilla JS로 구현
-                </span>
+                <div class="description-wrap">
+                  <span>
+                    프로젝트 설명:
+                    <br />
+                    Vanilla JS Web Site 개인 프로젝트
+                    <br />
+                    <br />
+                    세계 여행에 필요한 나라별/월별 기후를 알려주는 Web Site<br />
+                    worldbank - Climate Data API 사용<br />
+                    검색창에 국가명(영어 기준)을 검색, 자동 추천 기능<br />
+                    월을 선택하여 선택된 국가의 해당 월의 기후(평균 기온,
+                    강수량, 일교차)를 그에 맞는 이미지와 함께 확인 가능<br />
+                    모든 기능은 plugin없이 vanilla JS로 구현
+                  </span>
+                  <span>
+                    어려웠던 점: <br />
+                    처음 API를 사용하면서 제공하는 데이터 이용방법이 매우
+                    어려웠다. <br />
+                    INPUT에서 국가 검색 기능을 추가하는 것이 어려웠다.<br />
+                    기능을 먼저 생각하고 구현하다보니 페이지 디자인이 떨어지게
+                    되었다.<br /><br />
+                    배운점: <br />
+                    잘 사용하지 않는 API를 사용했지만, 검색해보며 API 사용법은
+                    제공 사이트에 방법이 잘 설명되어 있다는 것을 알게되어 구현할
+                    수 있었다.<br />
+                    라이브러리없이 국가 정보 API를 통해 국가 검색 기능을 구현할
+                    수 있게 되었다.<br />
+                    UI를 더욱 깔끔하게 하기 위해 tailwind로 리팩토링하여
+                    사용방법 및 웹 사이트 디자인에 도움이 되었다.<br />
+                  </span>
+                </div>
               </div>
               <div class="modal-project-stacks">
                 <span>HTML</span>
                 <span>CSS</span>
                 <span>Vanilla JS</span>
               </div>
+              <i class="fas fa-chevron-right description-next"></i>
               <button class="closeModal">X</button>
             </div>
           </div>
@@ -500,22 +554,43 @@
               <span class="modal-project-tag">React App</span>
               <h4 class="modal-project-title">Post It!</h4>
               <div class="modal-project-description">
-                <span
-                  >Full Stack(MERN Stack) 개인 프로젝트
-                  <br />
-                  Post it처럼 원하는 곳에 붙일 수 있는 Web App<br />
-                  Post 속성(Today/Later/Important..) 선택 설정 가능<br />
-                  Post내 to do 목록 complete, delete, update 가능<br />
-                  Google Login 및 JWT Login 구현<br />
-                  Login User만 Post it 생성/수정/삭제 가능(Auth)<br />
-                  Express와 Mongoose로 Backend 및 DB 구축
-                </span>
+                <div class="description-wrap">
+                  <span>
+                    프로젝트 설명:
+                    <br />
+                    Full Stack(MERN Stack) 개인 프로젝트
+                    <br /><br />
+                    Post it처럼 원하는 곳에 붙일 수 있는 Web App<br />
+                    Post 속성(Today/Later/Important..) 선택 설정 가능<br />
+                    Post내 to do 목록 complete, delete, update 가능<br />
+                    Google Login 및 JWT Login 구현<br />
+                    Login User만 Post it 생성/수정/삭제 가능(Auth)<br />
+                    Express와 Mongoose로 Backend 및 DB 구축
+                  </span>
+                  <span>
+                    어려웠던 점: <br />
+                    리팩토링 과정에서 React, Express, Mongoose 등 새로운 기술의
+                    학습이 계속해서 필요했다.<br />
+                    사용자 친화적이고 직관적인 UX를 구현하는 것이 어려웠다.<br />
+                    <br />
+                    배운점: <br />
+                    React에서 useState를 이용한 상태 관리와 props 전달하여
+                    상태를 관리하는 방식을 익힐 수 있었다.<br />
+                    Mongoose에서 POST의 속성을 저장하기 위한 간단한 Schema를
+                    작성할 수 있게 되었다.<br />Express를 통해 CRUD 기능을
+                    구현하여 Server단을 구성할 수 있었다.<br />코드의 가독성을
+                    위해 Component를 나누고, 상태 관리를 위해 Redux의 필요성을
+                    알게 되었다.
+                    <br />
+                  </span>
+                </div>
               </div>
               <div class="modal-project-stacks">
                 <span>React</span>
                 <span>Express(Node.js)</span>
                 <span>Mongoose(MongoDB)</span>
               </div>
+              <i class="fas fa-chevron-right description-next"></i>
               <button class="closeModal">X</button>
             </div>
           </div>
